--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "antd": "^5.17.4",
     "axios": "^1.7.2",
+    "flv.js": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "videojs-flvjs": "^0.3.1",
+    "videojs-flvjs-es6": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
